<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SessionExerciseActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <include
                android:id="@+id/topBar"
                layout="@layout/top_bar" />

            <androidx.cardview.widget.CardView
                android:id="@+id/actionCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_marginTop="16dp"
                app:cardCornerRadius="16dp"
                app:cardElevation="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/actionCardTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableEnd="@drawable/ic_session"
                        android:drawableTint="@color/primary"
                        android:gravity="center_vertical"
                        android:includeFontPadding="false"
                        android:text="Set 1"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <FrameLayout
                        android:id="@+id/chronometerContainer"
                        android:layout_width="250dp"
                        android:layout_height="250dp"
                        android:layout_gravity="center"
                        android:layout_marginVertical="8dp">

                        <com.google.android.material.progressindicator.CircularProgressIndicator
                            android:id="@+id/circularProgressBar"
                            style="@style/ThemeAwareProgressBar"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:progress="80"
                            android:rotation="220"
                            app:indicatorSize="240dp"
                            app:trackThickness="10dp" />

                        <LinearLayout
                            android:id="@+id/numberPickerContainer"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="50dp"
                            android:orientation="vertical"
                            android:visibility="gone">

                            <TextView
                                android:id="@+id/numberPickerText"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="Choose Weight"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                            <NumberPicker
                                android:id="@+id/numberPicker"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/timerContainer"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:orientation="vertical"
                            android:visibility="gone"
                            tools:visibility="visible">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:orientation="horizontal">

                                <ImageButton
                                    android:id="@+id/toggleTimerButton"
                                    android:layout_width="56dp"
                                    android:layout_height="56dp"
                                    android:layout_gravity="center"
                                    android:background="@drawable/circle_ripple"
                                    android:clickable="true"
                                    android:focusable="true"
                                    android:foreground="@drawable/circle_ripple"
                                    android:scaleType="fitCenter"
                                    android:src="@drawable/ic_play_fill"
                                    app:tint="@color/primary" />

                                <ImageButton
                                    android:id="@+id/stopTimerButton"
                                    android:layout_width="56dp"
                                    android:layout_height="56dp"
                                    android:layout_gravity="center"
                                    android:background="@drawable/circle_ripple"
                                    android:clickable="true"
                                    android:focusable="true"
                                    android:foreground="@drawable/circle_ripple"
                                    android:scaleType="fitCenter"
                                    android:src="@drawable/ic_stop"
                                    android:visibility="gone"
                                    app:tint="@color/primary" />

                            </LinearLayout>

                            <Chronometer
                                android:id="@+id/chronometer"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="Start"
                                android:textColor="@color/primary"
                                android:textSize="20sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/actionCardSubtext"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="Start set 1 of exercise"
                                android:textColor="@color/secondary"
                                android:textSize="12sp" />

                        </LinearLayout>

                    </FrameLayout>

                    <Button
                        android:id="@+id/continueButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Continue"
                        android:visibility="gone"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/noteCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_marginTop="16dp"
                android:visibility="gone"
                app:cardCornerRadius="16dp"
                app:cardElevation="0dp"
                tools:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/noteCardTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:includeFontPadding="false"
                        android:text="@string/add_a_note"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:drawableEndCompat="@drawable/ic_add_note"
                        app:drawableTint="@color/primary" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:boxBackgroundMode="outline"
                        app:boxCornerRadiusBottomEnd="12dp"
                        app:boxCornerRadiusBottomStart="12dp"
                        app:boxCornerRadiusTopEnd="12dp"
                        app:boxCornerRadiusTopStart="12dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/noteInput"
                            style="@style/ThemeAwareColor"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="top|start"
                            android:hint="@string/add_a_note_about_this_session"
                            android:inputType="textMultiLine"
                            android:minLines="3" />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/guideCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="120dp"
                android:layout_marginTop="16dp"
                android:visibility="gone"
                app:cardCornerRadius="16dp"
                app:cardElevation="0dp"
                tools:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="280dp"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/guideCardTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:includeFontPadding="false"
                        android:text="@string/guide"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:drawableEndCompat="@drawable/ic_info"
                        app:drawableTint="@color/primary" />

                    <WebView
                        android:id="@+id/guideVideoWebView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="8dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <androidx.cardview.widget.CardView
        android:id="@+id/bottomButtonsCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_gravity="bottom"
        android:layout_margin="16dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <Button
                android:id="@+id/finishExerciseButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/primaryLight"
                android:text="@string/finish_exercise"
                android:textColor="@color/bgDark" />

            <Button
                android:id="@+id/anotherSetButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:text="@string/another_set" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</FrameLayout>